# project-initializer

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  project-initializer.code-workspace  pyproject.toml  pyrightconfig.json  test_output.txt
.github/workflows/: ci.yml  release.yml  test-package.yml
api/app/: config.py
frontend/src/app/services/: auth.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
project_initializer/: __init__.py  cli.py  docs_generator.py  env_defaults.env  env_generator.py  file_transforms.py  wizard.py
project_initializer/templates/: .gitattributes  CLAUDE.md  README.md
project_initializer/templates-api-fastapi/: CLAUDE.md  README.md  docker-compose.yml
project_initializer/templates-api-fastapi/api/: Dockerfile  README.md  requirements.txt
project_initializer/templates-api-nestjs/: CLAUDE.md  README.md  docker-compose.yml
project_initializer/templates-entra-fastapi/: README.md  docker-compose.yml
project_initializer/templates-entra-nestjs/: README.md  docker-compose.yml
project_initializer/templates-supabase-fastapi/: README.md  docker-compose.yml
project_initializer/templates-supabase-nestjs/: README.md  docker-compose.yml
reference/: appgenerator-vs-project-initializer.md
tests/: test_async_db_flag.py  test_asyncdb_overlay.py  test_ci_workflow_scope.py  test_cli_entra_mode.py  test_cli_entra_nestjs.py  test_cli_parser.py  test_cli_validation.py  test_docker_runtime_invariants.py  test_docs_generator_selfcheck.py  test_docs_scope.py  test_docs_sync_async.py  test_docs_token_validate.py  test_docs_tutorial_mapping.py  test_entra_fastapi_integration_matrix.py  test_entra_fastapi_overlay.py  test_entra_frontend_overlay.py  test_entra_nestjs_overlay.py  test_entrypoint_line_endings.py  test_env_generator_entra.py  test_env_generator_jwt.py  test_env_generator_log_level.py  test_file_transforms.py  test_integration_build.py  test_issue5_nestjs_docker_healthcheck.py  test_issue5_nestjs_global_criteria.py  test_issue_003_zod_serialization.py  test_issue_10_bull_board.py  test_issue_10_focus_trap.py  test_issue_10_msal_init_sequence.py  test_issue_11_modal_slideover.py  test_issue_11_packaging.py  test_issue_12_chat_job_status.py  test_issue_12_global_criteria.py  test_issue_12_readme_content.py  test_issue_12_toast.py  test_issue_13_claude_md_content.py  test_issue_13_entra_cli_mode.py  test_issue_13_jwks_auto_refresh.py  test_issue_13_jwt_validation.py  test_issue_13_nestjs_production_readiness.py  (+49 more)
(+414 files in other folders)
