[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-initializer"
version = "0.3.1"
description = "CLI tool to scaffold full-stack projects with FastAPI or NestJS, Angular, and Docker"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Silvio Baratto"}
]
keywords = ["cli", "scaffold", "fastapi", "nestjs", "angular", "docker", "project-generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=9",
    "hypothesis>=6",
    "pyyaml>=6",
]

[project.scripts]
project-initializer = "project_initializer.cli:main"

[project.urls]
Homepage = "https://github.com/silviobaratto/project-initializer"
Repository = "https://github.com/silviobaratto/project-initializer"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit test",
    "integration: integration test",
    "e2e: end-to-end test",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["project_initializer*"]

[tool.setuptools.package-data]
"project_initializer" = [
    "templates/**/*", "templates/**/.*",
    "templates-api-fastapi/**/*", "templates-api-fastapi/**/.*",
    "templates-api-nestjs/**/*", "templates-api-nestjs/**/.*",
    "templates-token-fastapi/**/*", "templates-token-fastapi/**/.*",
    "templates-token-nestjs/**/*", "templates-token-nestjs/**/.*",
    "templates-token-frontend/**/*", "templates-token-frontend/**/.*",
    "templates-supabase-fastapi/**/*", "templates-supabase-fastapi/**/.*",
    "templates-supabase-nestjs/**/*", "templates-supabase-nestjs/**/.*",
    "templates-supabase-frontend/**/*", "templates-supabase-frontend/**/.*",
    "templates-asyncdb-fastapi/**/*", "templates-asyncdb-fastapi/**/.*",
]

[tool.setuptools.exclude-package-data]
"project_initializer" = [
    "*/node_modules/*",
    "*/node_modules/**/*",
    "**/node_modules/*",
    "**/node_modules/**/*",
]

[tool.ruff]
exclude = ["**/baml_client/**"]
